--- a/css/step2.css
+++ b/css/step2.css
@@ -67,6 +67,7 @@
     width: 640px;
 }
 .crew_image_item{
+    position: relative;
     float: left;
     width: 150px;
     height: 100px;
@@ -78,7 +79,7 @@
     height: 50px;
     padding:25px 0;
 }
-.crew_create_btn_box > button{
+.next_btn_step2{
     width: 200px;
     height: 50px;
     background-color: #eeeeee;
