--- a/css/step3.css
+++ b/css/step3.css
@@ -52,6 +52,10 @@
     font-weight: 700;
 }
 .next_btn_step3{
+    width: 200px;
+    height: 50px;
     background-color: #FF6333;
     color: #fff;
+    outline: none;
+    border: none;
 }
