--- a/css/default.css
+++ b/css/default.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     border-bottom: 1px solid #eee;
     height:100px;
-    z-index: 1;
+    /*z-index: 1;*/
     background: #fff;
 }
 
