--- a/css/step4.css
+++ b/css/step4.css
@@ -1,17 +1,24 @@
 @charset "UTF-8";
 
+.remove_answer{
+    cursor: pointer;
+}
+.remove_question{
+    cursor: pointer;
+}
 .qualification_write_box{
-    width: 1080px;
-    min-height: 400px;
     position: relative;
+}
+
+.qualification_write_inner_box{
+    width: 1080px;
 }
 
 .content_qualification_write_box{
     width: 850px;
     min-height: 390px;
     padding:10px 0 0 10px;
-    float: left;
-    background-color: #4b96e6;
+    margin-bottom: 50px;
 }
 .content_qualification_write_box > h2{
     font-size: 20px;
@@ -19,11 +26,14 @@
     margin-bottom: 30px;
 }
 .content_description_box{
-    float: left;
     width: 209px;
     border-left: 1px solid #424242;
     min-height: 390px;
     padding: 10px 0 0 10px;
+    position: fixed;
+    left:80%;
+    top:50%;
+    margin-top: -195px;
 }
 .content_description_box h4{
     margin-bottom: 15px;
@@ -43,12 +53,18 @@
     line-height: 20px;
 }
 .add_multiple_choice_question{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.add_multiple_choice_question:hover{
+    color: white;
+}
+.add_file_attachment_question{
+    margin:20px 0;
 }
 .add_subjective_question{
-    margin-bottom: 10px;
+    margin:20px 0;
 }
-
 .next_btn_step4{
     width: 200px;
     height: 50px;
@@ -56,4 +72,17 @@
     color: #fff;
     outline: none;
     border: none;
+}
+.question_input{
+    font-size: 20px;
+    padding: 8px 10px;
+    margin:20px 20px 20px 0;
+}
+.answer_input{
+    font-size: 16px;
+    padding: 8px 10px;
+    margin:2.5px 20px 2.5px 5px;
+}
+.add_box{
+    margin:2.5px 0 2.5px 20px;
 }
